[package]
name = "frontier_subgraph"
version = "0.1.0"
authors = ["0h-n0 <kbu94982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "frontier"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]
